fix(overview): introduces button + fixes spacing.

--- a/bb-frontend/src/components/courses/exam-content-view/exam-content-view.module.css
+++ b/bb-frontend/src/components/courses/exam-content-view/exam-content-view.module.css
@@ -74,3 +74,9 @@
     cursor: pointer;
     user-select: none;
 }
+
+@media only screen and (max-width: 844px) {
+    .questionBlock {
+        gap: 0;
+    }
+}
