--- a/bb-frontend/src/components/courses/question-radio-group/question-radio-group.module.css
+++ b/bb-frontend/src/components/courses/question-radio-group/question-radio-group.module.css
@@ -29,3 +29,9 @@
     flex-grow: 1;
     box-sizing: border-box;
 }
+
+@media only screen and (max-width: 844px) {
+    .answerRow {
+        height: auto;
+    }
+}
